Minute, to month

--- a/PablosCarsLtd.Website/Views/Article/Index.cshtml
+++ b/PablosCarsLtd.Website/Views/Article/Index.cshtml
@@ -14,7 +14,7 @@
                 </div>
                 <div class="col-6 d-flex justify-content-end p-0">
                     <p class="m-0">
-                        Editor: @Model.Article.Author.FirstName @Model.Article.Author.LastName | @Model.Article.CreatedAt.ToString("dd/mm/yy")
+                        Editor: @Model.Article.Author.FirstName @Model.Article.Author.LastName | @Model.Article.CreatedAt.ToString("dd/MM/yy")
                     </p>
                 </div>
             </div>
